[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'polkeos-runtime-wasm'
version = '1.0.0'
[dependencies.polkeos-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['polkeos-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
